# PromptWorks

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
alembic/versions/: 0001_initial_schema.py  0002_prompt_class_and_versions.py  0004_refactor_llm_providers.py  72f3f786c4a1_add_prompt_test_tables.py  8c4f0b8f9fc1_add_users_and_prompt_permissions.py  b7c3f9e2c4a0_add_prompt_completed_at.py  c1d2e3f4g5h6_add_prompt_implementation_records.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  prompt_tags.py  prompt_test_tasks.py  prompts.py  users.py
app/core/: config.py  llm_provider_registry.py  prompt_test_task_queue.py  security.py
app/models/: __init__.py  prompt.py  prompt_test.py  test_run.py  user.py
app/schemas/: auth.py  prompt.py  user.py
app/services/: prompt_test_engine.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: authApi.ts  http.ts  prompt.ts  promptTag.ts  user.ts
frontend/src/composables/: useAuth.ts
frontend/src/i18n/: messages.ts
frontend/src/router/: index.ts
frontend/src/types/: prompt.ts  user.ts
frontend/src/views/: AuthView.vue  PromptDetailView.vue  PromptManagementView.vue  PromptTagManagementView.vue  UserManagementView.vue
tests/: test_auth.py  test_llms.py  test_prompt_permissions.py  test_prompt_tags.py  test_prompt_test_task_queue.py  test_prompts.py  test_test_prompt.py  test_user_admin.py
